tests/idris2/reflection003/expected
1/1: Building refprims (refprims.idr)
LOG 0: Name: Prelude.Types.List.++
LOG 0: Type: (%pi Rig0 Implicit (Just a) %type (%pi RigW Explicit (Just xs) (Prelude.Types.List a) (%pi RigW Explicit (Just ys) (Prelude.Types.List a) (Prelude.Types.List a))))
LOG 0: Name: Prelude.Types.Strings.++
LOG 0: Type: (%pi RigW Explicit (Just x) String (%pi RigW Explicit (Just y) String String))
LOG 0: Resolved name: Prelude.Types.Nat
LOG 0: Constructors: [Prelude.Types.Z, Prelude.Types.S]
Error: While processing right hand side of dummy1. Error during reflection: Not really trying

refprims.idr:43:10--43:27
    |
 43 | dummy1 = %runElab logPrims
    |          ^^^^^^^^^^^^^^^^^

Error: While processing right hand side of dummy2. Error during reflection: Still not trying

refprims.idr:46:10--46:30
    |
 46 | dummy2 = %runElab logDataCons
    |          ^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of dummy3. Error during reflection: Undefined name

refprims.idr:49:10--49:25
    |
 49 | dummy3 = %runElab logBad
    |          ^^^^^^^^^^^^^^^

Error: While processing right hand side of dummy4. Error during reflection: failed after generating Main.{plus:XXXX}

refprims.idr:52:10--52:28
    |
 52 | dummy4 = %runElab tryGenSym
    |          ^^^^^^^^^^^^^^^^^^

